# tauri-plugin-serialport

./: Cargo.toml  package.json
src/: api.rs  lib.rs
webview-dist/: index.js
webview-src/: index.ts
