[package]
name = "tauri-plugin-serialport"
version = "1.0.1"
authors = ["deid84"]
description = ""
edition = "2021"
rust-version = "1.60"
exclude = ["/examples", "/webview-dist", "/webview-src", "node_modules"]

[dependencies]
tauri = { version = "2" }
serde = "1.0"
thiserror = "1.0"
serialport = "4.6.0"
